tests/sqllogic/sdb/pg/index/vector_search.test
statement ok
CREATE TABLE t (id INT, emb FLOAT[3]);


statement ok
CREATE INDEX l2_index ON t USING inverted(id, emb ivf (metric = 'l2'));


statement count 4
INSERT INTO t VALUES (1, [100, 0, 0]::FLOAT[3]), (2, [50, 50, 50]::FLOAT[3]), (3, [50, 25, 50]::FLOAT[3]), (4, [50, 50, 100]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t;


query
EXPLAIN SELECT id FROM l2_index ORDER BY emb <-> [0.0, 0.0, 0.0]::FLOAT[3] LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~2 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: l2_index                        │
│ Lookup: table                          │
│ Score: l2_distance(emb, FLOAT[3])      │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


query
EXPLAIN SELECT id FROM l2_index ORDER BY l2_norm(emb) LIMIT 5;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 5                                 │
│ Order By: #1 ASC                       │
│ ~4 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: l2_index                        │
│ Lookup: table                          │
│ Score: l2_distance(emb, FLOAT[3])      │
│ Top: 5                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯



query
EXPLAIN SELECT id FROM l2_index ORDER BY l2_distance([0, 0, 0]::FLOAT[3], emb) LIMIT 10;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 10                                │
│ Order By: #1 ASC                       │
│ ~4 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: l2_index                        │
│ Lookup: table                          │
│ Score: l2_distance(emb, FLOAT[3])      │
│ Top: 10                                │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


# Shouldn't be optimized for ANN
query
EXPLAIN SELECT id FROM l2_index ORDER BY emb <=> [0.0, 0.0, 0.0]::FLOAT[3] LIMIT 5;
----
QUERY PLAN
╭─ TOP_N ─────────────────────────╮
│ Top: 5                          │
│ Order By: #1 ASC                │
│ ~4 rows                         │
╰────────────────┬────────────────╯
╭─ PROJECTION ───┴────────────────╮
│ Projections: id,                │
│              emb <=> [0, 0, 0]  │
│ ~4 rows                         │
╰────────────────┬────────────────╯
╭─ IRESEARCH_SCAN ────────────────╮
│ Index: l2_index                 │
│ Lookup: table                   │
│ Projections: id (l), emb (i)    │
│ ~4 rows                         │
╰─────────────────────────────────╯


statement ok
VACUUM (REFRESH_TABLE) t;


query error
SELECT id FROM l2_index ORDER BY emb <-> [0, 0]::FLOAT[2] LIMIT 1;


query
SELECT id FROM l2_index ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
2


# Same ANN query against the base table -- optimizer autodetects the
# inverted index, rewrites to IRESEARCH_SCAN, and reads the
# InvertedIndexSnapshot stashed on the scan source at rewrite time.
query
SELECT id FROM t ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
2


query
SELECT id FROM l2_index ORDER BY l2_norm(emb) LIMIT 2;
----
id
3
2


query
EXPLAIN SELECT id FROM l2_index WHERE [0, 0, 0]::FLOAT[3] <-> emb < 0.7;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ───╮
│ Index: l2_index    │
│ Lookup: table      │
│ Index Filter:      │
│ ╭─ Vector Range ─╮ │
│ │ Field: emb     │ │
│ │ Metric: l2     │ │
│ │ Radius: < 0.7  │ │
│ ╰────────────────╯ │
│ Projections: id    │
│ ~4 rows            │
╰────────────────────╯



query
EXPLAIN SELECT id FROM l2_index WHERE [0, 0, 0]::FLOAT[3] <#> emb < 0.7;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ─────────────────────────╮
│ Index: l2_index                          │
│ Lookup: table                            │
│ Projections: id                          │
│ Column Filter: ([0, 0, 0] <#> emb) < 0.7 │
│ ~1 row                                   │
╰──────────────────────────────────────────╯



query
EXPLAIN SELECT id FROM l2_index WHERE 1 > l2_distance(emb, [1, 1, 1]::FLOAT[3]) ORDER BY id;
----
QUERY PLAN
╭─ ORDER_BY ────────────────╮
│ Order By: l2_index.id ASC │
│ ~4 rows                   │
╰─────────────┬─────────────╯
╭─ IRESEARCH_SCAN ──────────╮
│ Index: l2_index           │
│ Lookup: table             │
│ Index Filter:             │
│ ╭─ Vector Range ─╮        │
│ │ Field: emb     │        │
│ │ Metric: l2     │        │
│ │ Radius: < 1    │        │
│ ╰────────────────╯        │
│ Projections: id           │
│ ~4 rows                   │
╰───────────────────────────╯


query
SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100;
----
id
2
3


query
SELECT count(*) FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100;
----
count
2


query
EXPLAIN SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100 AND id % 2 = 0;
----
QUERY PLAN
╭─ FILTER ─────────────────╮
│ Expression: (id % 2) = 0 │
│ ~1 row                   │
╰─────────────┬────────────╯
╭─ IRESEARCH_SCAN ─────────╮
│ Index: l2_index          │
│ Lookup: table            │
│ Index Filter:            │
│ ╭─ Vector Range ─╮       │
│ │ Field: emb     │       │
│ │ Metric: l2     │       │
│ │ Radius: < 100  │       │
│ ╰────────────────╯       │
│ Projections: id          │
│ ~4 rows                  │
╰──────────────────────────╯



query
SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100 AND id % 2 = 0;
----
id
2


query
SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100 AND id = 3;
----
id
3


query
SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100 AND id > 2;
----
id
3


query
SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100 AND id = 999;
----
id


query
SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 100 AND (id = 2 OR id = 3);
----
id
2
3



query
EXPLAIN SELECT id FROM l2_index WHERE emb <-> '[0, 0, 0]'::FLOAT[3] < (0.5 + 0.2);
----
QUERY PLAN
╭─ IRESEARCH_SCAN ───╮
│ Index: l2_index    │
│ Lookup: table      │
│ Index Filter:      │
│ ╭─ Vector Range ─╮ │
│ │ Field: emb     │ │
│ │ Metric: l2     │ │
│ │ Radius: < 0.7  │ │
│ ╰────────────────╯ │
│ Projections: id    │
│ ~4 rows            │
╰────────────────────╯


query
EXPLAIN SELECT id FROM l2_index ORDER BY l2_distance(emb, [0, 0, 0]::FLOAT[3]) LIMIT 10;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 10                                │
│ Order By: #1 ASC                       │
│ ~4 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: l2_index                        │
│ Lookup: table                          │
│ Score: l2_distance(emb, FLOAT[3])      │
│ Top: 10                                │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


query
EXPLAIN SELECT id FROM l2_index ORDER BY l2_distance(emb, emb) LIMIT 5;
----
QUERY PLAN
╭─ TOP_N ─────────────────────────────╮
│ Top: 5                              │
│ Order By: #1 ASC                    │
│ ~4 rows                             │
╰──────────────────┬──────────────────╯
╭─ PROJECTION ─────┴──────────────────╮
│ Projections: id,                    │
│              l2_distance(emb, emb)  │
│ ~4 rows                             │
╰──────────────────┬──────────────────╯
╭─ IRESEARCH_SCAN ─┴──────────────────╮
│ Index: l2_index                     │
│ Lookup: table                       │
│ Projections: id (l), emb (i)        │
│ ~4 rows                             │
╰─────────────────────────────────────╯


query
EXPLAIN SELECT id FROM l2_index WHERE l2_distance(emb, emb) < 0.7;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ───────────────╮
│ Index: l2_index                │
│ Lookup: table                  │
│ Projections: id                │
│ Column Filter:                 │
│ l2_distance(emb, emb) < 0.7    │
│ ~1 row                         │
╰────────────────────────────────╯


query
SELECT count(*) FROM l2_index WHERE l2_distance(emb, emb) < 0.0001;
----
count
4


statement ok
CREATE TABLE t_l2 (id INT, emb FLOAT[3]);

statement ok
CREATE INDEX l2_tuned ON t_l2 USING inverted(emb ivf (metric = 'l2'));

statement count 4
INSERT INTO t_l2 VALUES (1, [100, 0, 0]::FLOAT[3]), (2, [50, 50, 50]::FLOAT[3]), (3, [50, 25, 50]::FLOAT[3]), (4, [50, 50, 100]::FLOAT[3]);

statement ok
VACUUM (REFRESH_TABLE) t_l2;

query
SELECT id FROM l2_tuned ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
2


statement ok
CREATE TABLE t_l1 (id INT, emb FLOAT[3]);


statement ok
CREATE INDEX l1_index ON t_l1 USING inverted(emb ivf (metric = 'l1'));


statement count 4
INSERT INTO t_l1 VALUES (1, [100, 0, 0]::FLOAT[3]), (2, [50, 50, 50]::FLOAT[3]), (3, [50, 25, 50]::FLOAT[3]), (4, [50, 50, 100]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t_l1;


query
EXPLAIN SELECT id FROM l1_index ORDER BY l1_norm(emb) LIMIT 5;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 5                                 │
│ Order By: #1 ASC                       │
│ ~4 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: l1_index                        │
│ Lookup: table                          │
│ Score: l1_distance(emb, FLOAT[3])      │
│ Top: 5                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯



query
EXPLAIN SELECT id FROM l1_index ORDER BY emb <+> [0, 1, 0]::FLOAT[3] LIMIT 5;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 5                                 │
│ Order By: #1 ASC                       │
│ ~4 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: l1_index                        │
│ Lookup: table                          │
│ Score: l1_distance(emb, FLOAT[3])      │
│ Top: 5                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯



query
SELECT id FROM l1_index ORDER BY emb <+> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1
3


query
SELECT id FROM l1_index ORDER BY l1_norm(emb) LIMIT 2;
----
id
1
3


statement ok
DROP INDEX l1_index;


statement ok
CREATE TABLE t_cos (id INT, emb FLOAT[3]);

statement ok
CREATE INDEX cos_index ON t_cos USING inverted(emb ivf (metric = 'cosine'));

statement count 4
INSERT INTO t_cos VALUES (1, [100, 0, 0]::FLOAT[3]), (2, [50, 50, 50]::FLOAT[3]), (3, [50, 25, 50]::FLOAT[3]), (4, [50, 50, 100]::FLOAT[3]);

statement ok
VACUUM (REFRESH_TABLE) t_cos;

query
EXPLAIN SELECT id FROM cos_index ORDER BY emb <=> [1.0, 0.0, 0.0]::FLOAT[3] LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~2 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: cos_index                       │
│ Lookup: table                          │
│ Score: cosine_distance(emb, FLOAT[3])  │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


query
SELECT id FROM cos_index ORDER BY emb <=> [1.0, 0.0, 0.0]::FLOAT[3] LIMIT 2;
----
id
1
3


query
EXPLAIN SELECT id FROM cos_index ORDER BY cosine_similarity(emb, [1.0, 0.0, 0.0]::FLOAT[3]) DESC LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 DESC                      │
│ ~2 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: cos_index                       │
│ Lookup: table                          │
│ Score: cosine_distance(emb, FLOAT[3])  │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


query
EXPLAIN SELECT id FROM cos_index ORDER BY cosine_distance(emb, [1.0, 0.0, 0.0]::FLOAT[3]) LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~2 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: cos_index                       │
│ Lookup: table                          │
│ Score: cosine_distance(emb, FLOAT[3])  │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


query
EXPLAIN SELECT id FROM cos_index WHERE cosine_distance(emb, [1.0, 0.0, 0.0]::FLOAT[3]) < 0.5;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ───╮
│ Index: cos_index   │
│ Lookup: table      │
│ Index Filter:      │
│ ╭─ Vector Range ─╮ │
│ │ Field: emb     │ │
│ │ Metric: cosine │ │
│ │ Radius: < 0.5  │ │
│ ╰────────────────╯ │
│ Projections: id    │
│ ~4 rows            │
╰────────────────────╯


query
EXPLAIN SELECT id FROM cos_index WHERE cosine_distance(emb, [1.0, 0.0, 0.0]::FLOAT[3]) > 0.5;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ──────────────────────╮
│ Index: cos_index                      │
│ Lookup: table                         │
│ Score: cosine_distance(emb, FLOAT[3]) │
│ Projections: id                       │
│ Column Filter:                        │
│ sdb_inverted_index_score > 0.5        │
│ ~1 row                                │
╰───────────────────────────────────────╯


statement ok
CREATE TABLE t_ip (id INT, emb FLOAT[3]);

statement ok
CREATE INDEX ip_index ON t_ip USING inverted(emb ivf (metric = 'ip', quant = 'none'));

statement count 4
INSERT INTO t_ip VALUES (1, [100, 0, 0]::FLOAT[3]), (2, [50, 50, 50]::FLOAT[3]), (3, [50, 25, 50]::FLOAT[3]), (4, [50, 50, 100]::FLOAT[3]);

statement ok
VACUUM (REFRESH_TABLE) t_ip;

query
EXPLAIN SELECT id FROM ip_index ORDER BY emb <#> [1.0, 0.0, 0.0]::FLOAT[3] LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~2 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: ip_index                        │
│ Lookup: table                          │
│ Score: inner_product(emb, FLOAT[3])    │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


query
SELECT id FROM ip_index ORDER BY emb <#> [0.0, 1.0, 0.5]::FLOAT[3] LIMIT 2;
----
id
4
2


query
EXPLAIN SELECT id FROM ip_index ORDER BY negative_inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~2 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: ip_index                        │
│ Lookup: table                          │
│ Score: inner_product(emb, FLOAT[3])    │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


query
EXPLAIN SELECT id FROM ip_index ORDER BY inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) DESC LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 DESC                      │
│ ~2 rows                                │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: ip_index                        │
│ Lookup: table                          │
│ Score: inner_product(emb, FLOAT[3])    │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~4 rows                                │
╰────────────────────────────────────────╯


# Identity-emit (user score == raw score) top-k with a static score lower
# bound: the collector enforces the floor (Min Score), like text min_score.
query
EXPLAIN SELECT id FROM ip_index WHERE inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) > 50 ORDER BY inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) DESC LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 DESC                      │
│ ~1 row                                 │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: ip_index                        │
│ Lookup: table                          │
│ Score: inner_product(emb, FLOAT[3])    │
│ Top: 2                                 │
│ Min Score: 50                          │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~1 row                                 │
╰────────────────────────────────────────╯


query
SELECT id FROM ip_index WHERE inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) > 50 ORDER BY inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) DESC LIMIT 2;
----
id
1


query
EXPLAIN SELECT id FROM ip_index WHERE negative_inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) < 0.0;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ───╮
│ Index: ip_index    │
│ Lookup: table      │
│ Index Filter:      │
│ ╭─ Vector Range ─╮ │
│ │ Field: emb     │ │
│ │ Metric: ip     │ │
│ │ Radius: < 0    │ │
│ ╰────────────────╯ │
│ Projections: id    │
│ ~4 rows            │
╰────────────────────╯


query
EXPLAIN SELECT id FROM ip_index WHERE inner_product(emb, [1.0, 0.0, 0.0]::FLOAT[3]) > 50;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ────────────────────╮
│ Index: ip_index                     │
│ Lookup: table                       │
│ Score: inner_product(emb, FLOAT[3]) │
│ Projections: id                     │
│ Column Filter:                      │
│ sdb_inverted_index_score > 50       │
│ ~1 row                              │
╰─────────────────────────────────────╯


statement ok
CREATE INDEX l1_index ON t_l1 USING inverted(emb ivf (Metric = 'L1'));

statement count 4
INSERT INTO t_l1 VALUES (1, [100, 0, 0]::FLOAT[3]), (2, [50, 50, 50]::FLOAT[3]), (3, [50, 25, 50]::FLOAT[3]), (4, [50, 50, 100]::FLOAT[3]);

statement ok
VACUUM (REFRESH_TABLE) t_l1;

query
SELECT id FROM l1_index ORDER BY l1_distance(emb, [0, 0, 0]::FLOAT[3]) LIMIT 2;
----
id
1
1


statement ok
CREATE TABLE t_err (id INT, emb FLOAT[3], emb_int INT[3]);

statement error
CREATE INDEX bad_opt ON t_err USING inverted(emb ivf (metric = 'l2', ef_search = 50));
----
db error: ERROR: Column 'emb': unknown ivf option 'ef_search'. Accepted options: metric (string: l2|l1|cosine|ip, REQUIRED), quant (string: sq8|sq4|pq|rabitq|none, default sq8 for l2|ip|cosine and none for l1; sq8|sq4|pq need l2|ip|cosine, rabitq needs l2|ip), pq_m (int >= 1, divides dimension, quant='pq' only, default auto ~d/2), rabitq_bits (int 1-9, quant='rabitq' only, default 1), compression (bool, default true; false stores the index vectors uncompressed (increases the search performance and the disk consumption))


statement error
CREATE INDEX bad_metric ON t_err USING inverted(emb ivf (metric = 'manhattan'));
----
db error: ERROR: Column 'emb': unknown ivf metric 'manhattan'. Expected one of: l2 l1 cosine ip


statement error
CREATE INDEX bad_train_zero ON t_err USING inverted(emb ivf (metric = 'l2', train_sample = 0));
----
db error: ERROR: Column 'emb': unknown ivf option 'train_sample'. Accepted options: metric (string: l2|l1|cosine|ip, REQUIRED), quant (string: sq8|sq4|pq|rabitq|none, default sq8 for l2|ip|cosine and none for l1; sq8|sq4|pq need l2|ip|cosine, rabitq needs l2|ip), pq_m (int >= 1, divides dimension, quant='pq' only, default auto ~d/2), rabitq_bits (int 1-9, quant='rabitq' only, default 1), compression (bool, default true; false stores the index vectors uncompressed (increases the search performance and the disk consumption))


statement error
CREATE INDEX bad_quant ON t_err USING inverted(emb ivf (metric = 'l2', quant = 'foo'));
----
db error: ERROR: Column 'emb': unknown ivf quant 'foo'. Expected one of: sq8 sq4 pq rabitq none


statement error
CREATE INDEX bad_metric_type ON t_err USING inverted(emb ivf (metric = 7));
----
db error: ERROR: Column 'emb': unknown ivf metric '7'. Expected one of: l2 l1 cosine ip


statement error
CREATE INDEX bad_scalar ON t_err USING inverted(id ivf (metric = 'l2'));
----
db error: ERROR: Column 'id' must be ARRAY(FLOAT, N) to use the 'ivf' opclass, not INTEGER


statement error
CREATE INDEX bad_int_arr ON t_err USING inverted(emb_int ivf (metric = 'l2'));
----
db error: ERROR: Column 'emb_int' must be ARRAY(FLOAT, N) to use the 'ivf' opclass, not INTEGER[3]


statement error
CREATE INDEX m_real_empty ON t_err USING inverted(emb ivf ());
----
db error: ERROR: Column 'emb': ivf opclass requires the 'metric' option (one of: l2, l1, cosine, ip). Example: ivf (metric = 'l2')


statement ok
CREATE INDEX m_real_real ON t_err USING inverted(emb ivf (metric = 'l2', quant = 'none'));

statement ok
DROP INDEX m_real_real;


statement error
CREATE INDEX m_real_bare ON t_err USING inverted(emb ivf);
----
db error: ERROR: Unknown opclass 'ivf' on column 'emb': no text dictionary by that name in schema 'public'
HINT: 'ivf' is a built-in opclass; use the options form 'ivf (...)'


statement error
CREATE INDEX m_fake_empty ON t_err USING inverted(emb fake_idx ());
----
db error: ERROR: Unknown built-in opclass 'fake_idx' on 'emb' (known: included, ivf)


statement error
CREATE INDEX m_fake_real ON t_err USING inverted(emb fake_idx (m = 16));
----
db error: ERROR: Unknown built-in opclass 'fake_idx' on 'emb' (known: included, ivf)


statement error
CREATE INDEX m_fake_fake ON t_err USING inverted(emb fake_idx (foo = 1));
----
db error: ERROR: Unknown built-in opclass 'fake_idx' on 'emb' (known: included, ivf)


statement error
CREATE INDEX m_fake_name ON t_err USING inverted(emb fake_dict);
----
db error: ERROR: Unknown opclass 'fake_dict' on column 'emb': no text dictionary by that name in schema 'public'



query
EXPLAIN SELECT id FROM l2_index WHERE id % 2 = 0 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ─────────────────────────────────────────────────╮
│ Top: 2                                                  │
│ Order By: #1 ASC                                        │
│ ~1 row                                                  │
╰────────────────────────────┬────────────────────────────╯
╭─ FILTER ───────────────────┴────────────────────────────╮
│ Expression: (id % 2) = 0                                │
│ ~1 row                                                  │
╰────────────────────────────┬────────────────────────────╯
╭─ IRESEARCH_SCAN ───────────┴────────────────────────────╮
│ Index: l2_index                                         │
│ Lookup: table                                           │
│ Score: l2_distance(emb, FLOAT[3])                       │
│ Projections: id, sdb_inverted_index_score               │
│ Column Filter:                                          │
│ optional: Dynamic Filter (sdb_inverted_index_score < ?) │
│ ~4 rows                                                 │
╰─────────────────────────────────────────────────────────╯


query
SELECT id FROM l2_index WHERE id = 2 OR id = 4 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
2
4



query
SELECT id FROM l2_index WHERE id = 999 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id


query
SELECT id FROM l2_index WHERE id > 1 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
2


statement ok
CREATE TABLE t_proj (id INT, category INT, payload VARCHAR, emb FLOAT[3]);


statement ok
CREATE INDEX proj_idx ON t_proj USING inverted(emb ivf (metric = 'l2'));


statement count 4
INSERT INTO t_proj VALUES (1, 1, 'a', [100, 0, 0]::FLOAT[3]), (2, 2, 'b', [50, 50, 50]::FLOAT[3]), (3, 1, 'c', [50, 25, 50]::FLOAT[3]), (4, 2, 'd', [50, 50, 100]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t_proj;


query
SELECT id FROM proj_idx WHERE category = 1 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
1


query
SELECT id FROM proj_idx WHERE category = 2 AND id < 4 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
2


query
SELECT id FROM proj_idx WHERE category = 1 AND emb <-> [0, 0, 0]::FLOAT[3] < 200 ORDER BY id;
----
id
1
3


query
EXPLAIN SELECT id FROM proj_idx WHERE category = 1 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~1 row                                 │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: proj_idx                        │
│ Lookup: table                          │
│ Score: l2_distance(emb, FLOAT[3])      │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ Column Filter: category = 1            │
│ ~1 row                                 │
╰────────────────────────────────────────╯


query
EXPLAIN SELECT id FROM l2_index WHERE emb <-> [0, 0, 0]::FLOAT[3] < 200 AND cosine_distance(emb, [0, 0, 0]::FLOAT[3]) < 0.5;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ──────────────────────╮
│ Index: l2_index                       │
│ Lookup: table                         │
│ Index Filter:                         │
│ ╭─ Vector Range ─╮                    │
│ │ Field: emb     │                    │
│ │ Metric: l2     │                    │
│ │ Radius: < 200  │                    │
│ ╰────────────────╯                    │
│ Column Filter:                        │
│ cosine_distance(emb, [0, 0, 0]) < 0.5 │
│ Projections: id                       │
│ ~1 row                                │
╰───────────────────────────────────────╯


query
EXPLAIN SELECT id FROM l2_index WHERE cosine_distance(emb, [0, 0, 0]::FLOAT[3]) < 0.5 AND emb <-> [0, 0, 0]::FLOAT[3] < 200;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ──────────────────────╮
│ Index: l2_index                       │
│ Lookup: table                         │
│ Index Filter:                         │
│ ╭─ Vector Range ─╮                    │
│ │ Field: emb     │                    │
│ │ Metric: l2     │                    │
│ │ Radius: < 200  │                    │
│ ╰────────────────╯                    │
│ Column Filter:                        │
│ cosine_distance(emb, [0, 0, 0]) < 0.5 │
│ Projections: id                       │
│ ~1 row                                │
╰───────────────────────────────────────╯


query
EXPLAIN SELECT id FROM proj_idx WHERE category = 1 AND emb <-> [0, 0, 0]::FLOAT[3] < 200;
----
QUERY PLAN
╭─ IRESEARCH_SCAN ────────────╮
│ Index: proj_idx             │
│ Lookup: table               │
│ Index Filter:               │
│ ╭─ Vector Range ─╮          │
│ │ Field: emb     │          │
│ │ Metric: l2     │          │
│ │ Radius: < 200  │          │
│ ╰────────────────╯          │
│ Column Filter: category = 1 │
│ Projections: id             │
│ ~1 row                      │
╰─────────────────────────────╯


statement ok
CREATE TEXT SEARCH DICTIONARY en(template = 'text', locale = 'en_US.UTF-8', case = 'none', stemming = false, accent = false, frequency = true, position = true);


statement ok
CREATE TABLE t_mixed (id INT, body VARCHAR, emb FLOAT[3]);


statement ok
CREATE INDEX mixed_idx ON t_mixed USING inverted(body en, emb ivf (metric = 'l2'));


statement count 4
INSERT INTO t_mixed VALUES (1, 'red fox', [100, 0, 0]::FLOAT[3]), (2, 'blue cat', [50, 50, 50]::FLOAT[3]), (3, 'red bird', [50, 25, 50]::FLOAT[3]), (4, 'blue dog', [50, 50, 100]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t_mixed;


query
SELECT id FROM mixed_idx ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
2


query
SELECT id FROM mixed_idx WHERE body = 'blue cat' ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
2


query
SELECT id FROM mixed_idx WHERE id % 2 = 1 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
1


query
EXPLAIN SELECT id FROM mixed_idx WHERE body @@ ts_phrase('red') ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~1 row                                 │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: mixed_idx                       │
│ Lookup: table                          │
│ Index Filter:                          │
│ ╭─ Term ──────────────╮                │
│ │ Field: body(string) │                │
│ │ Value: red          │                │
│ ╰─────────────────────╯                │
│ Score: l2_distance(emb, FLOAT[3])      │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~1 row                                 │
╰────────────────────────────────────────╯


query
SELECT id FROM mixed_idx WHERE body @@ ts_phrase('red') ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1
3



query
SELECT id FROM mixed_idx WHERE body @@ ts_phrase('red') ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 1;
----
id
1


query
SELECT id FROM mixed_idx WHERE body @@ ts_phrase('blue cat') ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
2


query
SELECT id FROM mixed_idx WHERE body @@ ts_any(['fox', 'bird']) ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1
3


query
SELECT id FROM mixed_idx WHERE body @@ ts_any(['red', 'blue']) ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 4;
----
id
1
3
2
4


query
SELECT id FROM mixed_idx WHERE body @@ ts_all(['red', 'fox']) ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1


query
SELECT id FROM mixed_idx WHERE body @@ ts_all(['blue', 'dog']) ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
4


query
SELECT id FROM mixed_idx WHERE body @@ ts_starts_with('re') ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1
3


query
SELECT id FROM mixed_idx WHERE body @@ ts_starts_with('bl') ORDER BY emb <-> [50, 50, 50]::FLOAT[3] LIMIT 2;
----
id
2
4


query
SELECT id FROM mixed_idx WHERE body @@ ts_like('re_') ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1
3


query
SELECT id FROM mixed_idx WHERE body @@ ts_like('b%') ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 4;
----
id
3
2
4


query
SELECT id FROM mixed_idx WHERE body @@ ts_regexp('bl.*') ORDER BY emb <-> [50, 50, 50]::FLOAT[3] LIMIT 2;
----
id
2
4


query
SELECT id FROM mixed_idx WHERE body @@ ts_ngram('blue') ORDER BY emb <-> [50, 50, 50]::FLOAT[3] LIMIT 2;
----
id
2
4


query
SELECT id FROM mixed_idx WHERE body @@ ts_levenshtein('rid', 1) ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1
3


# Hybrid: rocksdb id filter + text index filter
query
EXPLAIN SELECT id FROM mixed_idx WHERE id > 2 AND body @@ ts_any(['red', 'blue']) ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
QUERY PLAN
╭─ TOP_N ────────────────────────────────╮
│ Top: 2                                 │
│ Order By: #1 ASC                       │
│ ~1 row                                 │
╰────────────────────┬───────────────────╯
╭─ IRESEARCH_SCAN ───┴───────────────────╮
│ Index: mixed_idx                       │
│ Lookup: table                          │
│ Index Filter:                          │
│ ╭─ Terms ───────────────╮              │
│ │ Field: body(string)   │              │
│ │ Values: 'blue', 'red' │              │
│ │ Min Match: 1          │              │
│ ╰───────────────────────╯              │
│ Column Filter: id > 2                  │
│ Score: l2_distance(emb, FLOAT[3])      │
│ Top: 2                                 │
│ Projections: id,                       │
│              sdb_inverted_index_score  │
│ ~1 row                                 │
╰────────────────────────────────────────╯


query
SELECT id FROM mixed_idx WHERE id > 2 AND body @@ ts_any(['red', 'blue']) ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3
4


query
SELECT id FROM mixed_idx WHERE id IN (2, 3) AND body @@ ts_starts_with('re') ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
3


query
SELECT id FROM mixed_idx WHERE id % 2 = 1 AND body @@ ts_starts_with('bl') ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id


query
SELECT id FROM mixed_idx WHERE id < 4 AND body @@ ts_phrase('blue cat') ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
2


query
SELECT id FROM mixed_idx WHERE id >= 1 AND body @@ ts_all(['red', 'fox']) ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1


query
SELECT id FROM mixed_idx WHERE (id = 1 OR id = 4) AND body @@ ts_any(['fox', 'dog']) ORDER BY emb <-> [50, 0, 0]::FLOAT[3] LIMIT 2;
----
id
1
4


statement ok
CREATE TABLE t_big (id INT, emb FLOAT[3]);


statement ok
CREATE INDEX big_idx ON t_big USING inverted(emb ivf (metric = 'l2'));


statement count 1100
INSERT INTO t_big SELECT i, [CAST(i AS FLOAT), CAST(i AS FLOAT), CAST(i AS FLOAT)]::FLOAT[3] FROM generate_series(1, 1100) AS s(i);


statement ok
VACUUM (REFRESH_TABLE) t_big;


query
SELECT COUNT(*) FROM big_idx;
----
count
1100


query
SELECT id FROM big_idx ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 5;
----
id
1
2
3
4
5


query
SELECT COUNT(*) FROM (SELECT id FROM big_idx ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 50) sub;
----
count
50


# IVF kNN only scans nprobe clusters, so an exhaustive scan needs nprobe >= nlist.
statement ok
SET sdb_nprobe = 1000;


query
SELECT COUNT(*) FROM (SELECT id FROM big_idx ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 5000) sub;
----
count
1100


statement ok
RESET sdb_nprobe;


query
SELECT id FROM (SELECT id FROM l2_index ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 100) AS sub ORDER BY id;
----
id
1
2
3
4


query
SELECT id FROM proj_idx WHERE category = 1 ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 50;
----
id
3
1


statement ok
SET sdb_nprobe = 256;


query
SELECT id FROM big_idx ORDER BY emb <-> [500.5, 500, 500]::FLOAT[3] LIMIT 3;
----
id
500
501
499


statement ok
RESET sdb_nprobe;


statement ok
CREATE TABLE t_merge (id INT, emb FLOAT[3]);


statement ok
CREATE INDEX merge_idx ON t_merge USING inverted(id, emb ivf (metric = 'l2'));


statement count 2
INSERT INTO t_merge VALUES (1, [100, 0, 0]::FLOAT[3]), (2, [50, 50, 50]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t_merge;


statement count 2
INSERT INTO t_merge VALUES (3, [50, 25, 50]::FLOAT[3]), (4, [50, 50, 100]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t_merge;


statement count 2
INSERT INTO t_merge VALUES (5, [10, 10, 10]::FLOAT[3]), (6, [20, 20, 20]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t_merge;


statement count 2
INSERT INTO t_merge VALUES (7, [5, 5, 5]::FLOAT[3]), (8, [30, 30, 30]::FLOAT[3]);


statement ok
VACUUM (REFRESH_TABLE) t_merge;


statement ok
VACUUM (COMPACT_TABLE) t_merge;


query
SELECT id FROM merge_idx ORDER BY emb <-> [0, 0, 0]::FLOAT[3] LIMIT 2;
----
id
7
5
